# tico

./: .gitattributes  .gitignore  LICENSE  LICENSE-3RD-PARTY  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: ci.yaml  docs.yaml
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/development/: index.html
0.0.1/reference/: index.html
0.0.1/reference/hess/: index.html
0.0.1/reference/ic/: index.html
0.0.1/reference/opt/: index.html
0.0.1/reference/td/: index.html
0.0.1/reference/utils/: index.html
devtools/envs/: base.yaml
docs/: development.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/development/: index.html
latest/reference/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/hess/: index.html
latest/reference/ic/: index.html
latest/reference/opt/: index.html
latest/reference/td/: index.html
latest/reference/utils/: index.html
latest/scripts/: gen_ref_pages.py
latest/search/: search_index.json
tico/: __init__.py  _version.py  hess.py  ic.py  opt.py  td.py  utils.py
tico/tests/: test_ic.py  test_opt.py  test_td.py  test_utils.py  utils.py
